# expenseiq

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fast_api_app.py  pyproject.toml
.agents/: CONTEXT.md  hooks.json
.agents/scripts/: validate_tool_call.py
.agents/skills/expense-validator/: SKILL.md
.agents/skills/expense-validator/scripts/: validate_expense.py
.semgrep/: rules.yaml
app/: __init__.py
dashboard/: api.py  store.py
dashboard/static/: index.html
docs/: index.html
expense_agent/: agent.py  security.py  tools.py
expense_agent/.adk/: session.db
tests/: eval_expenses.json  test_agent.py  test_eval.py
